--- a/src/main/book-filtered/changelog.jspx
+++ b/src/main/book-filtered/changelog.jspx
@@ -58,7 +58,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{project.name}"
 			version="1.1.1"
-			dateCreated="2016-10-20T19:12:00-0500"
+			datePublished="2016-10-20T19:12:00-0500"
 			groupId="@{project.groupId}"
 			artifactId="@{project.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -73,7 +73,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{project.name}"
 			version="1.1.0"
-			dateCreated="2016-10-04T22:39:00-0500"
+			datePublished="2016-10-04T22:39:00-0500"
 			groupId="@{project.groupId}"
 			artifactId="@{project.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -90,7 +90,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{project.name}"
 			version="1.0"
-			dateCreated="2016-09-11T16:41:00-0500"
+			datePublished="2016-09-11T16:41:00-0500"
 			groupId="@{project.groupId}"
 			artifactId="@{project.artifactId}"
 			scmUrl="@{project.scm.url}"
