--- a/book/src/main/resources-filtered/META-INF/resources/news/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/news/servlet/changelog.jspx
@@ -36,7 +36,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-31T00:37:52-0500"
-		dateModified="2017-07-13T18:47:01-0500"
+		dateModified="2017-07-17T09:35:19-0500"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-news-servlet:pom.version}" />
@@ -54,6 +54,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			>
 				<ul>
 					<li>Updated dependencies.</li>
+					<li>Custom model objects may optionally be provided to the element constructors.</li>
 				</ul>
 			</changelog:release>
 		</c:if>
