--- a/book/src/main/resources-filtered/META-INF/resources/news/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/news/servlet/changelog.jspx
@@ -54,7 +54,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 				scmUrl="@{documented.scm.url}"
 			>
 				<ul>
-					<li>Added <core:link book="/core/model" page="/index.jspx" /> domain support.</li>
+					<li>Added <core:link book="/core/model" page="/" /> domain support.</li>
 				</ul>
 			</changelog:release>
 		</c:if>
@@ -83,7 +83,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		>
 			<ul>
 				<li>New <ao:a href="https://aoindustries.com/ao-oss-parent/">AO OSS Parent</ao:a> POM to simplify <code>pom.xml</code> files.</li>
-				<li>Project documentation moved to per-project book in <core:link book="/" page="/index.jspx" /> format.</li>
+				<li>Project documentation moved to per-project book in <core:link book="/" page="/" /> format.</li>
 				<li>Added changelog as top-level project link.</li>
 				<li>ReadableDateTime is the correct parameter type.</li>
 			</ul>
