--- a/book/src/main/resources-filtered/META-INF/resources/news/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/news/servlet/changelog.jspx
@@ -36,7 +36,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-31T00:37:52-0500"
-		dateModified="2019-09-30T05:31:41-0500"
+		dateModified="2019-11-02T16:41:06-0500"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-news-servlet:pom.version}" />
@@ -54,10 +54,23 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			>
 				<ul>
 					<li>Added <core:link book="/core/model" page="/" /> domain support.</li>
-					<li>Updated dependencies.</li>
+					<li>Minimum Java version changed from 1.7 to 1.8.</li>
 				</ul>
 			</changelog:release>
 		</c:if>
+
+		<changelog:release
+			projectName="@{documented.name}"
+			version="1.3.0"
+			datePublished="2019-10-11T17:34:27-0500"
+			groupId="@{documented.groupId}"
+			artifactId="@{documented.artifactId}"
+			scmUrl="@{documented.scm.url}"
+		>
+			<ul>
+				<li>Updated dependencies.</li>
+			</ul>
+		</changelog:release>
 
 		<changelog:release
 			projectName="@{documented.name}"
