--- a/book/src/main/resources-filtered/META-INF/resources/news/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/news/servlet/changelog.jspx
@@ -49,9 +49,9 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			<changelog:release
 				projectName="@{documented.name}"
 				version="#{version}"
-				groupId="@{documented.groupId}"
+				groupId="@{project.groupId}"
 				artifactId="@{documented.artifactId}"
-				scmUrl="@{documented.scm.url}"
+				scmUrl="@{project.scm.url}"
 			>
 				<ul>
 					<li>Added <core:link book="/core/model" page="/" /> domain support.</li>
@@ -64,9 +64,9 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.3.0"
 			datePublished="2019-10-11T17:34:27-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Updated dependencies.</li>
@@ -77,9 +77,9 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.2.1"
 			datePublished="2019-06-19T09:57:02-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Using managed dependencies:
@@ -95,9 +95,9 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.2.0"
 			datePublished="2019-04-21T00:25:49-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Minimum Java version changed from 1.6 to 1.7.</li>
@@ -109,9 +109,9 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.1.3"
 			datePublished="2017-07-19T23:08:09-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Updated dependencies.</li>
@@ -123,9 +123,9 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.1.2"
 			datePublished="2016-11-15T19:04:06-0600"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>New <ao:a href="https://aoindustries.com/ao-oss-parent/">AO OSS Parent</ao:a> POM to simplify <code>pom.xml</code> files.</li>
@@ -139,9 +139,9 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.1.1"
 			datePublished="2016-10-20T19:12:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Added missing direct dependencies.</li>
@@ -154,9 +154,9 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.1.0"
 			datePublished="2016-10-04T22:39:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Improved Javadoc formatting.</li>
@@ -171,9 +171,9 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.0"
 			datePublished="2016-09-11T16:41:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Added newsfeeds.</li>
