--- a/book/src/main/resources-filtered/META-INF/resources/news/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/news/servlet/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-31T00:37:52-0500"
-		dateModified="2020-02-14T01:49:53-0600"
+		dateModified="2020-03-07T06:01:29-0600"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-news-servlet:pom.version}" />
@@ -49,12 +49,16 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			<changelog:release
 				projectName="@{documented.name}"
 				version="#{version}"
-				groupId="@{documented.groupId}"
+				groupId="@{project.groupId}"
 				artifactId="@{documented.artifactId}"
-				scmUrl="@{documented.scm.url}"
+				scmUrl="@{project.scm.url}"
 			>
 				<ul>
 					<li>Minimum Java version changed from 1.7 to 1.8.</li>
+					<li>
+						Reduced use of property substitutions in <code>pom.xml</code>.
+						This is to help 3rd-party parsers that fail to perform full Maven-compatible substitutions.
+					</li>
 					<li>Using <ao:a href="https://aoindustries.com/ao-fluent-html/">AO Fluent HTML</ao:a> for HTML generation.</li>
 				</ul>
 			</changelog:release>
@@ -64,9 +68,9 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.3.0"
 			datePublished="2019-10-11T17:34:27-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Updated dependencies.</li>
@@ -77,9 +81,9 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.2.1"
 			datePublished="2019-06-19T09:57:02-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Using managed dependencies:
@@ -95,9 +99,9 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.2.0"
 			datePublished="2019-04-21T00:25:49-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Minimum Java version changed from 1.6 to 1.7.</li>
@@ -109,9 +113,9 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.1.3"
 			datePublished="2017-07-19T23:08:09-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Updated dependencies.</li>
@@ -123,9 +127,9 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.1.2"
 			datePublished="2016-11-15T19:04:06-0600"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>New <ao:a href="https://aoindustries.com/ao-oss-parent/">AO OSS Parent</ao:a> POM to simplify <code>pom.xml</code> files.</li>
@@ -139,9 +143,9 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.1.1"
 			datePublished="2016-10-20T19:12:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Added missing direct dependencies.</li>
@@ -154,9 +158,9 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.1.0"
 			datePublished="2016-10-04T22:39:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Improved Javadoc formatting.</li>
@@ -171,9 +175,9 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.0"
 			datePublished="2016-09-11T16:41:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Added newsfeeds.</li>
