--- a/book/src/main/resources-filtered/META-INF/resources/news/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/news/servlet/changelog.jspx
@@ -36,8 +36,8 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		title="@{documented.name} Changelog"
 		shortTitle="Changelog"
 		tocLevels="1"
-		datePublished="2016-10-31T00:37:52-0500"
-		dateModified="2021-03-18T06:05:46-05:00"
+		datePublished="2016-10-31T00:37:52-05:00"
+		dateModified="2021-05-22T13:07:02-05:00"
 	>
 		<c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
 			<changelog:release
@@ -46,7 +46,11 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 				groupId="@{project.groupId}"
 				artifactId="@{documented.artifactId}"
 				scmUrl="@{project.scm.url}"
-			/>
+			>
+				<ul>
+					<li>Updated to <ao:a rel="nofollow" href="https://www.oracle.com/java/technologies/javaee/javaeetechnologies.html#javaee7">Java™ EE 7 Web Profile</ao:a> (Servlet 3.1, JSP 2.3, EL 3.0, and JSTL 1.2).</li>
+				</ul>
+			</changelog:release>
 		</c:if>
 
 		<changelog:release
@@ -117,7 +121,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.3.0"
-			datePublished="2019-10-11T17:34:27-0500"
+			datePublished="2019-10-11T17:34:27-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -130,7 +134,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.2.1"
-			datePublished="2019-06-19T09:57:02-0500"
+			datePublished="2019-06-19T09:57:02-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -148,7 +152,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.2.0"
-			datePublished="2019-04-21T00:25:49-0500"
+			datePublished="2019-04-21T00:25:49-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -162,7 +166,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.1.3"
-			datePublished="2017-07-19T23:08:09-0500"
+			datePublished="2017-07-19T23:08:09-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -176,7 +180,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.1.2"
-			datePublished="2016-11-15T19:04:06-0600"
+			datePublished="2016-11-15T19:04:06-06:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -192,7 +196,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.1.1"
-			datePublished="2016-10-20T19:12:00-0500"
+			datePublished="2016-10-20T19:12:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -207,7 +211,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.1.0"
-			datePublished="2016-10-04T22:39:00-0500"
+			datePublished="2016-10-04T22:39:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -224,7 +228,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.0"
-			datePublished="2016-09-11T16:41:00-0500"
+			datePublished="2016-09-11T16:41:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
