--- a/book/src/main/resources-filtered/META-INF/resources/news/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/news/servlet/changelog.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-news-servlet - SemanticCMS newsfeeds in a Servlet environment.
-Copyright (C) 2016, 2017, 2019, 2020, 2021, 2022  AO Industries, Inc.
+Copyright (C) 2016, 2017, 2019, 2020, 2021, 2022, 2023  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -39,7 +39,12 @@ along with semanticcms-news-servlet.  If not, see <https://www.gnu.org/licenses/
     datePublished="2016-10-31T00:37:52-05:00"
     dateModified="2021-10-16T00:03:45-05:00"
   >
-    <c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
+    <c:set var="latestRelease" value="1.6.1" />
+    <c:if test="${
+      fn:endsWith('@{project.version}', '-SNAPSHOT')
+      and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')
+      and '@{project.version}' != (latestRelease.concat('-SNAPSHOT'))
+    }">
       <changelog:release
         projectName="@{documented.name}"
         version="@{project.version}"
