--- a/book/src/main/resources-filtered/META-INF/resources/news/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/news/servlet/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-news-servlet.  If not, see <https://www.gnu.org/licenses/
     shortTitle="Changelog"
     tocLevels="1"
     datePublished="2016-10-31T00:37:52-05:00"
-    dateModified="2021-10-16T00:03:45-05:00"
+    dateModified="2023-09-18T03:16:04Z"
   >
     <c:set var="latestRelease" value="1.6.1" />
     <c:if test="${
@@ -52,7 +52,14 @@ along with semanticcms-news-servlet.  If not, see <https://www.gnu.org/licenses/
         artifactId="@{documented.artifactId}"
         repository="@{nexusUrl}content/repositories/snapshots/"
         scmUrl="@{project.scm.url}"
-      />
+      >
+        <ul>
+          <li>
+            News entries now have their own <code>allowRobots</code>, which overrides the default inherited from the
+            page.
+          </li>
+        </ul>
+      </changelog:release>
     </c:if>
 
     <changelog:release
