--- a/book/src/main/resources-filtered/META-INF/resources/news/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/news/servlet/changelog.jspx
@@ -37,9 +37,9 @@ along with semanticcms-news-servlet.  If not, see <https://www.gnu.org/licenses/
     shortTitle="Changelog"
     tocLevels="1"
     datePublished="2016-10-31T00:37:52-05:00"
-    dateModified="2023-09-18T03:16:04Z"
+    dateModified="2023-09-23T22:13:58Z"
   >
-    <c:set var="latestRelease" value="1.6.1" />
+    <c:set var="latestRelease" value="1.7.0" />
     <c:if test="${
       fn:endsWith('@{project.version}', '-SNAPSHOT')
       and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')
@@ -52,15 +52,24 @@ along with semanticcms-news-servlet.  If not, see <https://www.gnu.org/licenses/
         artifactId="@{documented.artifactId}"
         repository="@{nexusUrl}content/repositories/snapshots/"
         scmUrl="@{project.scm.url}"
-      >
-        <ul>
-          <li>
-            News entries now have their own <code>allowRobots</code>, which overrides the default inherited from the
-            page.
-          </li>
-        </ul>
-      </changelog:release>
+      />
     </c:if>
+
+    <changelog:release
+      projectName="@{documented.name}"
+      version="1.7.0"
+      datePublished="2023-09-23T22:13:58Z"
+      groupId="@{project.groupId}"
+      artifactId="@{documented.artifactId}"
+      scmUrl="@{project.scm.url}"
+    >
+      <ul>
+        <li>
+          News entries now have their own <code>allowRobots</code>, which overrides the default inherited from the
+          page.
+        </li>
+      </ul>
+    </changelog:release>
 
     <changelog:release
       projectName="@{documented.name}"
